tests/sksl/errors/InvalidWorkgroupRTS.glsl
### Compilation failed:

error: 1: 'workgroup' is not permitted here
workgroup int x;
^^^^^^^^^
1 error
